before refactoring